Add styled scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,3 +19,16 @@ body {
 .active {
   font-weight: bold;
 }
+
+body::-webkit-scrollbar {
+  width: 10px; /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+  background: #edece8; /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #1f2937; /* color of the scroll thumb */
+  border-radius: 20px; /* roundness of the scroll thumb */
+}
